--- a/package.json
+++ b/package.json
@@ -17,8 +17,14 @@
   },
   "homepage": "https://github.com/nguptaa/Image-to-Text-to-Speech#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "gridfs-stream": "^1.1.1",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.4.21",
+    "multer": "^1.4.1",
+    "multer-gridfs-storage": "^3.2.3",
     "tesseract.js": "^1.0.14"
   }
 }
